# project-synapse-mcp

./: .env.example  .gitignore  LICENSE  README.md  benchmark_search.py  check_db.py  claude_desktop_config.json  example_mcp_config.json  pyproject.toml  reingest_all.py  scratch_check_entities.py  test_endpoints.py  test_integrator.py  test_kg_storage.py  test_pipeline.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/: 04_infrastructure_optimization.md  05_llm_extraction.md  06_on_demand_synthesis.md
.planning/tmp/: docs-work-manifest.json
.trunk/: trunk.yaml
ai_guidance/examples/: knowledge_synthesis_workflow.md
ai_guidance/prompts/: knowledge_synthesis_best_practices.md  montague_grammar_guide.md  zettelkasten_methodology_guide.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  GETTING_STARTED.md  TESTING.md
scratch/: agent_skills.txt  check_any_rels.py  check_db.py  check_eidetic_entity.py  check_eidetic_rels.py  check_eideticnet_rels.py  check_facts.py  check_indexes.py  check_neo4j.py  check_neo4j_version.py  check_observations.py  check_recent.py  count_labels.py  docs_init.json  fix_indexes.py  fix_synapse_indexes.py  reembed_all_nodes.py  scratch.py  scratch2.py  scratch_check_entities.py  search_catastrophic.py  search_eidetic.py  search_entities.py  search_raw_source.py  search_source.py  search_test_ingest.py  test_cleaning.py  test_fulltext.py  verify_cleaning.py
scripts/: generate_insights.py  reingest_all.py  setup.py
src/synapse_mcp/: __about__.py  __init__.py  server.py
tests/: __init__.py  debug_test.py  step_by_step_test.py  test_basic.py  test_fixes.py  test_health.py  test_kg_storage.py  test_regex_fix.py  test_setup.py  test_wiki_resilience.py
wiki/: index.md
(+48 files in other folders)
